objects/Rate_Group__c.object
<CustomObject>
    <fields>
        <fullName>Claims_Fiduciary1__c</fullName>
        <label>Claims Fiduciary</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claims_Fiduciary2__c</fullName>
        <label>Claims Fiduciary</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claims_Fiduciary3__c</fullName>
        <label>Claims Fiduciary</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions1__c</fullName>
        <label>Commissions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions2__c</fullName>
        <label>Commissions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions3__c</fullName>
        <label>Commissions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Exchange1__c</fullName>
        <label>Data Exchange</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Exchange2__c</fullName>
        <label>Data Exchange</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Exchange3__c</fullName>
        <label>Data Exchange</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dental1__c</fullName>
        <label>Dental</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dental2__c</fullName>
        <label>Dental</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dental3__c</fullName>
        <label>Dental</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_1_Amount__c</fullName>
        <label>Grouping 1 Amt</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_2_Amount__c</fullName>
        <label>Grouping 2 Amt</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_3_Amount__c</fullName>
        <label>Grouping 3 Amt</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Name2__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name3__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Service__c</fullName>
        <label>List Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Administrative_Fee1__c</fullName>
        <label>Medical Administrative Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Administrative_Fee2__c</fullName>
        <label>Medical Administrative Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Administrative_Fee3__c</fullName>
        <label>Medical Administrative Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <label>Miscellaneous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Services1__c</fullName>
        <label>Non-Standard Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Services2__c</fullName>
        <label>Non-Standard Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Services3__c</fullName>
        <label>Non-Standard Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Service_Fee1__c</fullName>
        <label>Other Service Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Service_Fee2__c</fullName>
        <label>Other Service Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Service_Fee3__c</fullName>
        <label>Other Service Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Services1__c</fullName>
        <label>Other Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Services2__c</fullName>
        <label>Other Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Services3__c</fullName>
        <label>Other Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perscription_Administrative_Fee1__c</fullName>
        <label>Perscription Administrative Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perscription_Administrative_Fee2__c</fullName>
        <label>Perscription Administrative Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perscription_Administrative_Fee3__c</fullName>
        <label>Perscription Administrative Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Related_Services1__c</fullName>
        <label>Product Related Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Related_Services2__c</fullName>
        <label>Product Related Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Related_Services3__c</fullName>
        <label>Product Related Services</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Rate Groups</relationshipLabel>
        <relationshipName>Rate_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Exchange</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Services</fullName>
                </value>
                <value>
                    <fullName>Other Services</fullName>
                </value>
                <value>
                    <fullName>Product-Related Services</fullName>
                </value>
                <value>
                    <fullName>Prescription Drug Administrative Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total1__c</fullName>
        <label>Total</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total2__c</fullName>
        <label>Total</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total3__c</fullName>
        <label>Total</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groupNumber__c</fullName>
        <label>groupNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rate Group</label>
    <nameField>
        <label>Rate Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>